--- a/style.css
+++ b/style.css
@@ -151,12 +151,6 @@ h1 {
 	font-size: 45px;
 }
 
-iframe {
-    width: 100%;
-    height: 720px;
-    border: 0;
-}
-
 img {
 	/*margin: 0 auto;*/
 	width: 100%;
@@ -164,10 +158,12 @@ img {
 
 .half_img {
     width: 630px;
+    display: inline-block;
 }
 
 .third_img {
     width: 420px;
+    display: inline-block;
 }
 
 a {
